--- a/OmgBreakfast.WebApi/OmgBreakfast.WebApi.csproj
+++ b/OmgBreakfast.WebApi/OmgBreakfast.WebApi.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OmgBreakfast.Contracts\OmgBreakfast.Contracts.csproj" />
+    <ProjectReference Include="..\OmgBreakfast.BLL\OmgBreakfast.BLL.csproj" />
+    <ProjectReference Include="..\OmgBreakfast.Contracts\OmgBreakfast.ApiContracts.csproj" />
+    <ProjectReference Include="..\OmgBreakfast.Data\OmgBreakfast.Data.csproj" />
   </ItemGroup>
 
 </Project>
